bugfix Wegebau